Added emojis. The emoji picker is coming soon, as is the font file. More emojis coming soon ^_^ Added the ability to ban and unban users.
Improved the installation instructions.
Changed the collation of the tables from utf8_general_ci to utf8mb4_general_ci.
Changed the group ID order.
Custom pages are now templates rather than little snippets being inserted into a template.
Changed the collation of the driver to utf8mb4_general_ci.
Added a default_group config setting.
Ban flag is overwritten for admins and super mods.

--- a/pages/test.html
+++ b/pages/test.html
@@ -1,1 +1,6 @@
-<div class="rowitem">Testing</div>
+{{template "header.html" . }}
+<div class="rowblock">
+	<div class="rowitem">{{.Title}}</div>
+</div>
+<div class="rowblock">Testing</div>
+{{template "footer.html" . }}
