Made some minor tweaks. The DefaultRoute parameter in the configuration struct is now a string. Fixed a few mismatched HTML tags. Added the profile_comments_row template. Added more alt attributes for images and associated title=""s in a few places. Connections should now be closed properly. Custom Pages no longer have a .html file extension in their URLs. We now track route views for the default route and the custom page route.
Began work on cleaning up the profiles on Cosora.

--- a/pages/page_test.html
+++ b/pages/page_test.html
@@ -1,8 +1,8 @@
 {{template "header.html" . }}
-<div class="rowblock">
+<div class="rowblock rowhead">
 	<div class="rowitem">Test Page</div>
 </div>
-<div class="rowblock">
+<div class="rowblock parablock">
 	<div class="rowitem passive">Testing</div>
 </div>
 {{template "footer.html" . }}
