--- a/themes/tempra_simple/overrides/login.html
+++ b/themes/tempra_simple/overrides/login.html
@@ -15,11 +15,13 @@
 			</div>
 			<div class="formrow login_button_row form_button_row">
 				<div class="formitem"><button name="login-button" class="formbutton">{{lang "login_submit_button"}}</button></div>
-				<div class="formitem dont_have_account">
-					<a href="/accounts/create/">{{lang "login_no_account"}}
-				</div>
-				<div class="formitem forgot_password">
-					<a href="/accounts/password-reset/">{{lang "login_forgot_password"}}</a>
+				<div class="fall_opts">
+					<div class="formitem dont_have_account">
+						<a href="/accounts/create/">{{lang "login_no_account"}}
+					</div>
+					<div class="formitem forgot_password">
+						<a href="/accounts/password-reset/">{{lang "login_forgot_password"}}</a>
+					</div>
 				</div>
 			</div>
 		</form>
