Fixed the analytics charts. Fixed the back to site link destination.
Added the ReadTimeout, WriteTimeout, IdleTimeout and FullReqLog config settings.

--- a/themes/nox/overrides/panel_group_menu.html
+++ b/themes/nox/overrides/panel_group_menu.html
@@ -1,6 +1,6 @@
 <nav class="colstack_left" aria-label="{{lang "panel_menu_aria"}}">
 	<div class="colstack_item colstack_head">
-		<div class="rowitem back_to_site"><a href="/panel/">Back to site</a></div>
+		<div class="rowitem back_to_site"><a href="/">Back to site</a></div>
 	</div>
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/groups/edit/{{.ID}}">{{lang "panel_group_menu_head"}}</a></div>
