--- a/themes/nox/overrides/panel_before_head.html
+++ b/themes/nox/overrides/panel_before_head.html
@@ -1,5 +1,5 @@
 <div class="above_right">
-    <div class="left_bit">{{lang "panel_back_to_site"}}</div>
+    <div class="left_bit"><a href="/">{{lang "panel_back_to_site"}}</a></div>
     <div class="right_bit">
 		<img src="{{.CurrentUser.MicroAvatar}}" height=32 width=32 />
 		<span>{{lang "panel_welcome"}}{{.CurrentUser.Name}}</span></div>
