Basic group promotions. Add the users_groups_promotions table. Optimise ConvoViewPage.
Shortened some things.
Convo CSS fixes.
Make sure the user cache is flushed properly after the post stats change.

You will need to run the patcher / updater for this commit.

--- a/themes/nox/overrides/panel_group_menu.html
+++ b/themes/nox/overrides/panel_group_menu.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="colstack_item rowmenu">
 		<div class="rowitem passive"><a href="/panel/groups/edit/{{.ID}}">{{lang "panel_group_menu_general"}}</a></div>
-		<div class="rowitem passive"><a>{{lang "panel_group_menu_promotions"}}</a></div>
+		<div class="rowitem passive"><a href="/panel/groups/edit/promotions/{{.ID}}">{{lang "panel_group_menu_promotions"}}</a></div>
 		<div class="rowitem passive"><a href="/panel/groups/edit/perms/{{.ID}}">{{lang "panel_group_menu_permissions"}}</a></div>
 	</div>
 {{template "panel_inner_menu.html" . }}
