reduce boilerplate in the client template builder save a few more bytes in client templates shave down img tags and global.js mini parse remove comment in topic alt userinfo

--- a/themes/nox/overrides/panel_before_head.html
+++ b/themes/nox/overrides/panel_before_head.html
@@ -1,6 +1,6 @@
 <div class="above_right">
     <div class="left_bit"><a href="/">{{lang "panel_back_to_site"}}</a></div>
     <div class="right_bit">
-		<img src="{{.CurrentUser.MicroAvatar}}" height=32 width=32 />
+		<img src="{{.CurrentUser.MicroAvatar}}" height=32 width=32>
 		<span>{{lang "panel_welcome"}}{{.CurrentUser.Name}}</span></div>
 </div>
