new modtools ux - don't allow users to select things they shouldn't be able to - hide mod options the user doesn't have access to - highlight options which can be selected - stop counting topics twice when they're clicked on multiple times
fix modtools not opening in some cases
fix command orders in batch files
fix global.js's getExt()
reduce boilerplate

--- a/themes/nox/overrides/topics_topic.html
+++ b/themes/nox/overrides/topics_topic.html
@@ -1,4 +1,4 @@
-<div class="topic_row{{if .Sticky}} topic_sticky{{else if .IsClosed}} topic_closed{{end}}"data-tid={{.ID}}>
+<div class="topic_row{{if .Sticky}} topic_sticky{{else if .IsClosed}} topic_closed{{end}}{{if .CanMod}} can_mod{{end}}"data-tid={{.ID}}>
 	<div class="rowitem topic_left passive datarow">
 		<a href="{{.Creator.Link}}"><img src="{{.Creator.MicroAvatar}}"height=64 alt="Avatar"title="{{.Creator.Name}}'s Avatar"aria-hidden="true"></a>
 		<span class="topic_inner_left">
